--- a/LaPartDieu_root/menu.html
+++ b/LaPartDieu_root/menu.html
@@ -68,7 +68,7 @@
 
 		<div id="dinnercourse">
 			<h3>DINNERCOURSE</h3>
-			<p>味わうごとに感動があるお料理の数々<br>
+			<p>味わうごとに感動があるお料理の数々、<br>
 			本格フランス料理のフルコース</p>
 		</div>
 		<ul>
