--- a/espace_root/menu.html
+++ b/espace_root/menu.html
@@ -19,51 +19,54 @@
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="menu.html">MENU</a></li>
 			<li><a href="access.html">ACCESS</a></li>
-		</ul>	
+		</ul>
 	</div><!--navi-->
 </header><!-- /header -->
 <div id="allcontets">
 	<div id="mainvisual">
 		<h2>MENU</h2>
 	</div><!-- /mainvisual -->
-	<div id="menu">	
+	<div id="menu">
 		<div id="hair">
 			<h3>Hair</h3>
 			<dl>
 				<dt>カット</dt>
-				<dd>&yen;3,000+税</dd>
+				<dd>&yen;3,000</dd>
 				<dt>カラー</dt>
-				<dd>&yen;4,200+税</dd>
+				<dd>&yen;4,200</dd>
 				<dt>パーマ</dt>
-				<dd>&yen;5,000+税</dd>
+				<dd>&yen;5,000</dd>
 				<dt>学生カット</dt>
-				<dd>&yen;2,500+税</dd>
+				<dd>&yen;2,500</dd>
 			</dl>
+			<p>+税込</p>
 		</div><!-- /hair -->
 		<div id="relaxation">
 			<h3>Relaxation</h3>
 			<dl>
 				<dt>ヘッドスパ</dt>
-				<dd>&yen;2,000+税</dd>
+				<dd>&yen;2,000</dd>
 				<dt>オーガニックトリートメント</dt>
-				<dd>&yen;1,900+税</dd>
+				<dd>&yen;1,900</dd>
 				<dt>アロマヘアマッサージ</dt>
-				<dd>&yen;3,200+税</dd>
+				<dd>&yen;3,200</dd>
 			</dl>
+			<p>+税込</p>
 		</div><!-- /relaxation -->
 		<img src="images/menucutimage.jpg" alt="カットのイメージ" class="img">
 		<div id="handeye">
 			<h3>Hand&Eye</h3>
 			<dl>
 				<dt>ハンドケア</dt>
-				<dd>&yen;1,500+税</dd>
+				<dd>&yen;1,500</dd>
 				<dt>ネイル</dt>
-				<dd>&yen;4,200~+税</dd>
+				<dd>&yen;4,200~</dd>
 				<dt>花嫁・パーティーネイル</dt>
-				<dd>&yen;5,500~+税</dd>
+				<dd>&yen;5,500~</dd>
 				<dt>まつ毛エクステ</dt>
-				<dd>&yen;2,500+税</dd>
+				<dd>&yen;2,500</dd>
 			</dl>
+			<p>+税込</p>
 		</div><!-- /handeye -->
 	</div><!-- /menu -->
 
@@ -72,7 +75,7 @@
 
 <footer>
 	<div class="footer_inner">
-		
+
 
 	<h2 class="logo"><a href="index.html"><img src="images/indexespacefooter_logo.gif" alt="espaceのロゴ"></a></h2>
 	<div id="info">
