--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							<p>サロンを出るころには自分至上、最高にかわいくなれるようにイメージをして。サロンの広々としてなおかつリラックスできる空間をイメージしてサイトをデザインしている。</p>
 							<a href="espace_root/index.html" target="block"><p class="site"><span>サイトへ</span></p></a>
 						</div><!--contets_right-->
-					</div><!--all_contets-->	
+					</div><!--all_contets-->
 				</div><!--work-->
 			</div>
 			<div id="contact" class="pt-page pt-page-4"><!--contact-->
@@ -157,21 +157,16 @@
 							<ul>
 								<li id="saka4"><a href="#"><span class="home"> Home</span></a></li id="dl-menu">
 							</ul>
-						</div><!--navi-->	
+						</div><!--navi-->
 					</header><!-- /header -->
 					<div id="all_contets">
-						<iframe src="https://www.google.com/maps/d/embed?mid=1U9HLmQaeMmUsYWhw9d72u98BX92h0VlM&hl=ja" width="500" height="394"></iframe>
 						<div id="contets">
 							<h2>contact</h2>
-							<p>お問い合わせはHAL大阪までお願いします。</p>
-							<p>&#12306;530-0001 大阪市北区梅田3-3-1<br>
+							<p>お問い合わせは下記メールアドレスまでお願いします。</p>
 								TEL：06-6347-0001<br>
-								FAX：06-6347-0504<br>
-								URL：www.hal.ac.jp
 							</p>
 							<p>お問合せ：<br>
-							就職担当：山口まで<br>
-							yamaguchi.you@hal.ac.jp
+							メールアドレス：<minaminoumi_saka@yahoo class="co jp">minaminoumi_saka@yahoo.jp</minaminoumi_saka@yahoo>
 							</p>
 						</div><!--contets-->
 					</div><!--all_contets-->
