--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
 								<li id="saka3"><a href="#"><span class="contact">to Contact</span></a></li id="dl-menu">
 									<!-- <li id="saka2"><a href="#"><span class="work">to Work</span></a></li id="dl-menu"> -->
 							</ul>
-						</div><!--navi-->	
+						</div><!--navi-->
 					</header><!-- /header -->
 					<div id="all_contets">
 						<div id="contets_left">
 							<h2><a href="LaPartDieu_root/index.html" target="block"><img src="images/lapartdieu.png" alt="LaPartDieu"></a></h2>
 							<h3>コンセプトは「少し特別で堅苦しくなくフランス料理を楽しめる」</h3>
-							<p>店舗の外観が可愛らしくフランスの小さなレストランをイメージとしているので、それに合わせてサイトのデザインも可愛らしさと少しの大人っぽさを押し出している。</p>
+							<p>店舗の外観が可愛らしくフランスの小さなレストランをイメージとしているので、それに合わせてサイトのデザインも可愛らしさと少しの大人っぽさを押し出している。<br>レスポンシブ対応。</p>
 							<a href="LaPartDieu_root/index.html" target="block"><p class="site"><span>サイトへ</span></p></a>
 						</div><!--contets_left-->
 						<div id="contets_right">
