--- a/LaPartDieu_root/access.html
+++ b/LaPartDieu_root/access.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <meta charset="UTF-8" />
+<meta name="robots" content="noindex" />
 <head>
 	<title>LaPartDieu access</title>
 	<link rel="stylesheet" type="text/css" href="css/access.css">
