--- a/espace_root/access.html
+++ b/espace_root/access.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>espace about</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1"><!--追記-->
+	<link rel="stylesheet" type="text/css" href="css/common.css"><!--追記-->
 	<link rel="stylesheet" type="text/css" href="css/header.css">
 	<link rel="stylesheet" type="text/css" href="css/access.css">
 	<link rel="stylesheet" type="text/css" href="css/footer.css">
