--- a/espace_root/index.html
+++ b/espace_root/index.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" type="text/css" href="css/header.css">
 <link rel="stylesheet" type="text/css" href="css/index.css">
 <link rel="stylesheet" type="text/css" href="css/footer.css">
+<meta name="viewport" content="width=device-width,initial-scale=1"><!--追記-->
+<link rel="stylesheet" type="text/css" href="css/common.css"><!--追記-->
 </head>
 <body>
 <header>
@@ -34,15 +36,16 @@
 			<dt>2020-1-11</dt>
 			<dd>雑誌「HAL」に紹介されました！</dd>
 			<!--項目２-->
-			<dt class="news2">2020-1-11</dt>
-			<dd class="news2">WEBサイトオープンのお知らせ</dd>
+			<div class="news2">
+			<dt>2020-1-11</dt>
+			<dd>WEBサイトオープンのお知らせ</dd>
+			</div>
 		</dl>
 	</div><!--contents_news-->
 </div><!--allcontents-->
 
 <footer>
 	<div class="footer_inner">
-		
 
 	<h2 class="logo"><a href="index.html"><img src="images/indexespacefooter_logo.gif" alt="espaceのロゴ"></a></h2>
 	<div id="info">
