--- a/LaPartDieu_root/header.html
+++ b/LaPartDieu_root/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <meta charset="UTF-8" />
+<meta name="robots" content="noindex" />
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/header.css">
